# devicely

./: .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  deidentification.ipynb  example.ipynb  pyproject.toml  requirements.txt  setup.py  timeshift_example.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  main.yml  pypi.yml  sphinx_build.yml  test.yml  unittest.yml
devicely/: __init__.py  _compat.py  empatica.py  everion.py  faros.py  helpers.py  muse.py  shimmer_plus.py  spacelabs.py  tag.py  time_stamp.py
docs/: autodoc.rst  conf.py  conf.py.orig  contribution.html  example.html  example.ipynb  examples.html  examples.ipynb  genindex.html  index.html  installation.html  moduleref.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: contribution.rst.txt  examples.ipynb.txt  index.rst.txt  installation.rst.txt  moduleref.rst.txt
inst/: devicely_structure.tex  paper.bib  paper.md
paper/: paper.md
sphinx/: README.md  conf.py  contribution.rst  example.ipynb  examples.ipynb  index.rst  moduleref.rst
test_devicely/: test_empatica.py
tests/: test_empatica.py  test_everion.py  test_faros.py  test_muse.py  test_shimmer.py  test_spacelabs.py  test_tags.py  test_timestamp.py
tests/Empatica_test_data_read/: HR.csv  TEMP.csv
tests/Everion_test_data/: CsvData_aggregates_EV-EC39-7079-57A8.csv  CsvData_analytics_events_EV-EC39-7079-57A8.csv  CsvData_attributes_dailys_EV-EC39-7079-57A8.csv  CsvData_everion_events_EV-EC39-7079-57A8.csv  CsvData_features_EV-EC39-7079-57A8.csv  (+2 more)
tests/Tags_test_data/: tags.csv
(+35 files in other folders)
