[tool.poetry]
name = "devicely"
version = "1.1.0"
description = "Read multiple signals from different sources."
authors = [
    "Ariane Morassi Sasso <ariane.morassi-sasso@hpi.de>",
    "Jost Morgenstern <jost.morgenstern@student.hpi.uni-potsdam.de>",
    "Felix Musmann <felix.musmann@student.hpi.de>"
]
license = "MIT"
repository = "https://github.com/hpi-dhc/devicely"
documentation = "https://hpi-dhc.github.io/devicely"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9'
]
readme='README.md'

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.0"
pyEDFlib = "^0.1.22"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
ipykernel = "^6.0.3"
jupyter = "^1.0.0"
nbsphinx = "^0.8.6"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
